--- a/web/assets/style.css
+++ b/web/assets/style.css
@@ -128,6 +128,7 @@ div.panel p:first-child {
     width: 100%;
     left: 0;
 	background: rgba(0, 0, 0, 0.3); 
+	overflow-x: hidden;
 }
 
 #diffoutput {
@@ -135,7 +136,7 @@ div.panel p:first-child {
 	background-color: white;
     border: 1px solid black;
     border-radius: 10px 10px 10px 10px;
-    margin: auto 2.5em 2.5em 2.5em;
+    margin: 2.5em;
     padding: 20px;
     font-size: 13px;
    	-webkit-box-shadow:  0px 0px 25px 3px  rgba(0, 0, 0, 0.3);
